# praxis-lang

./: .gitignore  Cargo.toml  PRAXIS-LANG-TRACKER.md  README.md
.github/workflows/: ci.yml  release.yml
crates/px-ast/: Cargo.toml
crates/px-ast/src/: common.rs  constructs.rs  expressions.rs  lib.rs  procedures.rs  types.rs  values.rs
crates/px-cheatsheet/: Cargo.toml
crates/px-cheatsheet/src/: lib.rs
crates/px-cheatsheet/tests/: cheatsheet_drift.rs
crates/px-compiler/: Cargo.toml
crates/px-compiler/src/: builder.rs  error.rs  lib.rs
crates/px-compiler/tests/: parse_examples.rs  rfc_0001_self_hosts.rs  rfc_0002_self_hosts.rs
crates/px-eval/: Cargo.toml
crates/px-eval/src/: error.rs  eval.rs  lib.rs  registry.rs  value.rs
crates/px-grammar/: Cargo.toml
crates/px-grammar-gen/: Cargo.toml
crates/px-grammar-gen/src/: grammar.rs  lib.rs  main.rs
crates/px-grammar-gen/src/fragments/: declarations.pest  document.pest  header.pest  procedures.pest  tokens.pest  types.pest  v1_expressions.pest  v1_steps.pest  v2_code_block.pest  v2_expressions.pest  values.pest
crates/px-grammar/src/: grammar.pest  lib.rs
crates/px-napi/: Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
crates/px-napi/src/: lib.rs
crates/px-napi/test/: smoke.mjs
crates/px-schema/: Cargo.toml
crates/px-schema-derive/: Cargo.toml
crates/px-schema-derive/src/: lib.rs
crates/px-schema/src/: generator.rs  lib.rs  projection.rs  types.rs  validator.rs
crates/px-schema/tests/: schema_drift.rs
crates/px-yaml/: Cargo.toml
crates/px-yaml/examples/: emit_yaml.rs
crates/px-yaml/src/: lib.rs
crates/px-yaml/tests/: config_yaml.rs  parity.rs  roundtrip.rs
docs/: px-grammar-cheatsheet.md
docs/epic/: ADR-praxis-lang-single-source-of-truth.md  PRAXIS-LANG-TRACKER.md  PXLANG-M3W2-MILESTONES.md  PXLANG-M3W2-RESULT.md  PXLANG-M4-MILESTONES.md  PXLANG-M4-RESULT.md  PXLANG-M5-MILESTONES.md  PXLANG-M5-RESULT.md
docs/rfcs/: RFC-0001-semantic-core.md  RFC-0001-semantic-core.px  RFC-0002-structural-refinement-types.md  RFC-0002-structural-refinement-types.px
examples/: legacy_procedure.px  memory_assistant.px  memory_assistant.yaml  routing_pipeline.px  yaml_and_rust_faithful.px
schema/: px.schema.json  px.schema.px
scripts/: check-no-bom.sh  regen-cheatsheet.ps1  regen-grammar.ps1  regen-schema.ps1
