[package]
name = "px-cheatsheet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
px-ast = { path = "../px-ast" }
px-schema = { path = "../px-schema" }
schemars = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "px-cheatsheet-gen"
path = "src/bin/px_cheatsheet_gen.rs"
