[package]
name = "px-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "The .px compiler: source text into AST into IR."

[dependencies]
px-ast = { path = "../px-ast" }
px-grammar = { path = "../px-grammar" }
pest = { workspace = true }
