[package]
name = "px-eval"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Expression evaluator and constraint-engine primitives for .px."

[dependencies]
px-ast = { path = "../px-ast" }
px-compiler = { path = "../px-compiler" }
serde_json = { workspace = true }
