[package]
name = "px-grammar-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Generator that assembles grammar fragments into the canonical grammar.pest for .px. The grammar is a generated artifact, never hand-edited."

[[bin]]
name = "px-grammar-gen"
path = "src/main.rs"

[dependencies]
px-ast = { path = "../px-ast" }
