[package]
name = "px-grammar"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "The generated .px grammar plus its pest parser binding."

[dependencies]

[dev-dependencies]
px-grammar-gen = { path = "../px-grammar-gen" }
