[package]
name = "px-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "NAPI-RS bindings for the .px Praxis Intent Language (Node/TS consumers)."

# Native addon: napi-rs needs a C-dynamic library that Node loads as `.node`.
[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs v3 bindings. The addon exposes the canonical px-compiler + px-eval
# over N-API so Node/TS consumers run the Rust engine directly (ADR pillar P5).
napi = { version = "3", default-features = false, features = ["napi9", "serde-json"] }
napi-derive = "3"
px-ast = { path = "../px-ast" }
px-compiler = { path = "../px-compiler" }
px-eval = { path = "../px-eval" }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2"
