[package]
name = "px-schema"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Schema types and JSON-Schema emitter for .px. The schema is a projection of px-ast, regenerated on every release."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
schemars = { workspace = true }
px-ast = { path = "../px-ast" }

[[bin]]
name = "px-schema-gen"
path = "src/bin/px_schema_gen.rs"
