[package]
name = "px-yaml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "YAML authoring surface for .px, round-tripping through px-ast. Not a second source of truth."

[dependencies]
